- Fixed a data fixture problem where the colin user overwrote the lauren user - Restyled the rider lists on the rideOffer page in ride.css - Changed the rider list on riderOffer from <p> tags to <li> tags - Enhanced the show offer page to recognize whether the post belongs to the user - Fixed floating issues causing misaligned rider lists on the showOffer page

--- a/rootlessme/web/css/ride.css
+++ b/rootlessme/web/css/ride.css
@@ -136,7 +136,7 @@ tbody {
 
 #mainRideDate {
     float: left;
-    margin: 50px, 0px, 0px, 0px;
+    margin: 50px 0px 0px 0px;
 }
 
 #mainRideSummary {
@@ -159,7 +159,8 @@ tbody {
 
 #mainRideDetails {
     float: right;
-    margin: 0px 0px 0px 50px;
+    margin: 0px 0px 0px 0px;
+    width: 400px;
     
 }
 
@@ -196,15 +197,11 @@ tbody {
 
 #informationContainer {
     clear: right;
+    width: 280px;
 }
 
 .postedByStyles {
     margin: 0px 0px 0px 0px;
-}
-
-.riderPictures {
-    float: left;
-    margin: 0px 20px 0px 0px;
 }
 
 .driverPicture {
@@ -251,4 +248,27 @@ tbody {
     
     
     background-color: #D14D2F;
+}
+
+.riderListBlock
+{
+    clear: left;
+}
+
+.riderList
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.riderListItem {
+    margin: 4px 8px 4px 0px;
+    padding: 4px 8px 4px 0px;
+    float: left;
+}
+
+#seatDetailsBlock {
+    clear: left;
 }
